# Rust

book/: Cargo.toml
book/book/: control_flow
book/book/src/: control_flow.rs  data_types.rs  functions.rs  guess_game.rs  main.rs  ownership.rs  refrences.rs  slice.rs  var_mut.rs
book/src/: main.rs  strlen.rs
examples-bin/: Cargo.toml
examples-bin/src/: main.rs
get_next_line/: Cargo.toml  a.txt
get_next_line/src/: main.rs
ggez/: Cargo.toml
ggez/src/: main.rs
leetcode/arrays/: 1.rs  217.rs  242.rs
leetcode/linked-list/: 206.reverse-linked-list.rs
leetcode/sliding-window/: 121.rs
leetcode/two-pointers/: 125.rs
libft/: Cargo.toml
libft/src/: lib.rs  main.rs
libft/src/lib/: lib.rs
minitalk/: Cargo.toml
minitalk/src/: main.rs
minitlak/: Cargo.toml
minitlak/src/: main.rs
rust-actix-get-in-touch/: Cargo.toml  Dockerfile  docker-compose.yml
rust-actix-get-in-touch/src/: main.rs
rust-tuto/external_module/: Cargo.toml
rust-tuto/external_module/src/: exec.rs  main.rs
rust-tuto/rust_fundamentals/: Cargo.toml
rust/src/: ft_strlen.rs  main.rs
snaphood/: Cargo.toml
snaphood/src/: main.rs
snaphood/src/lib/: args_checker.rs  data.rs  errors.rs  hasher.rs  lib.rs  parser.rs  ziper.rs
solana/airdrop-project/: index.js  package-lock.json  package.json
solana/solana-tuto-1/: .env  custom-program.ts  keypair.js  package-lock.json  package.json  read-data.ts  transfer-sol.ts
str_split/src/: lib.rs
task_manager/: Cargo.toml
task_manager/src/: main.rs
words_counter/: Cargo.toml
words_counter/src/: main.rs
(+34 files in other folders)
